fix dumb scrollbar issue bc vuetify
https://stackoverflow.com/questions/56973002/vuetify-adds-scrollbar-when-its-not-needed

--- a/frontend/src/styles/globals/_global.scss
+++ b/frontend/src/styles/globals/_global.scss
@@ -6,6 +6,10 @@ $mobile-size: 800px;
   line-height: 1.25rem;
 }
 
+html { 
+  overflow-y: auto !important;
+}
+
 code {
   font-family: 'IBM Plex Mono', monospace;
   font-family: 'Open Sans', sans-serif;
